 8. If no MAI biography then show artist image.
 9. Better track details spacing.
10. Don't show player menu if set for single player and power button shown in
    toolbar.
11. Fade top/bottom of now-playing (info and MAI) details.
12. Move 'Changes have been saved' from settings pages to bottom left.
13. Don't show menu if click on header item in now-playing track list.

2.4.1
-----
 1. Ensure sliders are re-added when settings saved.
 2. Fix usage of player parameter when player name has spaces.
 3. Fix restricting slider input value to min/max range.
 4. If 'single' passed as query param then ignore players on other LMS servers.
 5. Remove LMS8.2 shuffle mode setting from 'Random mix' dialog, as this
    setting will now be generic and not random mix specific.
 6. Hide alarm settings if alarm functionality is disabled.
 7. When click browse's back button after clicking (...) in now-playing re-show
    now-playing MAI view.
 8. Only navigate back into now-playing from browse if using mobile layout.
 9. Adjust power button in toolbar position.
10. If MAI can't find details, then show artist, album or track title in
    relevant section instead of error message.
11. Show 'Source' in track details.
12. Long-press on back button goes home, even if home button shown.
13. Fix showing of player volume level in group volume dialog.
14. Decrease size of settings sliders based upon view width.

2.4.0
-----
 1. Add categories when browsing into years. e.g. My Music / Years / 2021 /
    Genres / Hard Rock / Albums
 2. Add basic 'swap' queue command.
 3. Blur background images - requires browser supports backdrop-filter CSS.
 4. Add support for 'single' URL query. When this is set, and a player name or
    id, is passed, then Material will only control this player and will ignore
    others.
 5. Only show 'Append random album' in artist's album list if more than 1 album.
 6. Reduce size of 'Scroll queue to current track' icon.