@@ -17,6 +17,7 @@
 11. Fade top/bottom of now-playing (info and MAI) details.
 12. Move 'Changes have been saved' from settings pages to bottom left.
 13. Don't show menu if click on header item in now-playing track list.
+14. Show album and track counds in now-playing.
 
 2.4.1
 -----
